data/all_generated_tests/raw_wast_tests/nop_IncorrectBranchTargetResolution_21.wast
;; 2. **Test 2: `nop` in Loops and Branching**:    - **Description**: Place `nop` within a loop and use a backward branch (`br`) to the loop's start. Ensure that the program correctly loops back and repeats the instruction sequence.    - **Constraint**: `nop` should not alter the functioning of the loop's control flow or branch resolution.    - **Relation to Incorrect Branch Target Resolution**: Ensures that `nop` does not cause the loop to branch to an unintended location.

(assert_invalid
  (module
    (func (loop (nop) (br 0)))
  )
  "loop type mismatch"
)